updated to elasticsearch 8 and added tests

--- a/templates/about.html
+++ b/templates/about.html
@@ -14,7 +14,7 @@
             <div class="item8" id="bottomBorder"></div>
             <div class="item9" id="homeButton"><a href="../home/index">Home</a></div> 
             <div class="item10" id="radioButton"><a href="../radio/index">Radio</a></div> 
-            <div class="item11" id="rand1Button"></div> 
+            <div class="item11" id="rand1Button"><a href="../badi/index">Badi</a></div>  
             <div class="item12" id="labButton"><a href="../lab/index">lab</a></div> 
             <div class="item13 activeButton" id="aboutButton"><a href="../about/index">About</a></div> 
             <div class="item3" id="mainFrame">
