--- a/templates/radio.html
+++ b/templates/radio.html
@@ -16,7 +16,7 @@
             <div class="item8" id="bottomBorder"></div>
             <div class="item9" id="homeButton"><a href="../home/index">Home</a></div> 
             <div class="item10 activeButton" id="radioButton"><a href="../radioControl/set">Radio&emsp;<img src="/addons/images/console.svg" id="buttonIcon"></a></div> 
-            <div class="item11" id="rand1Button"></div> 
+            <div class="item11" id="rand1Button"><a href="../badi/index">Badi</a></div>  
             <div class="item12" id="labButton"><a href="../lab/index">lab</a></div> 
             <div class="item13" id="aboutButton"><a href="../about/index">About</a></div> 
             <div class="item3" id="mainFrame">
